--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 				<div id="canvas__vertical" class="canvas canvas__3"></div>
 				<div id="canvas__horisontal" class="canvas canvas__1"></div>
 				<div id="canvas__square" class="canvas canvas__2"></div>
-				<div id="button__headline" class="button__headline">Headline</div>
-				<div id="button__main_text" class="button__main_text">Main text</div>
+ 				<div id="wysiwyg" style="margin: 20px;">
+ 				 <input type="button" value="Headline" class="button__headline" onclick="document.execCommand('fontSize', false, '30px');" style="font-weight: bold;">
+ 				 <input type="button" value="Main text" class="button__headline" onclick="document.execCommand('fontSize', false, '20pt');" style="font-weight: bold;">
+ 				</div>
 			</div>
 			<div contenteditable="true" id="editor" class="editor-conteiner__editor">
 			</div>	
@@ -52,14 +54,7 @@
 		document.getElementById('editor').style.height = '551px';
 	}
 
-
-	buttonHeadline.onclick = function(){
-		document.getElementById('editor').style.fontSize = '50px';
-	}
-	buttonMainText.onclick = function(){
-		document.getElementById('editor').style.fontSize = '25px';
-	}
-
+		
 
 </script>
 </body>
