--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Editor.hell</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="js/scripts.js">
+	<link rel="shortcut icon" href="image/logo.png" type="image/x-icon">
 	<script type="text/javascript">
 		
 	</script>
@@ -18,7 +19,7 @@
  				<div id="wysiwyg" style="margin: 20px;">
  					<input type="button" value="Headline" id="button__headline" class="button__headline">
  				 	<input type="button" value="Main text" id="button__main_text" class="button__headline">
- 				 	
+
  				</div>
 			</div>
 			<div contenteditable="true" id="editor" class="editor-conteiner__editor">
