--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
  				<div id="wysiwyg" style="margin: 20px;">
  					<input type="button" value="Headline" id="button__headline" class="button__headline">
  				 	<input type="button" value="Main text" id="button__main_text" class="button__headline">
-
  				</div>
+ 				<div class="align align__1"></div>
+ 				<div class="align align__2"></div>
+ 				<div class="align align__3"></div>
 			</div>
 			<div contenteditable="true" id="editor" class="editor-conteiner__editor">
 			</div>	
